資料移至 json 檔

--- a/index.html
+++ b/index.html
@@ -19,19 +19,32 @@
 	<link rel="stylesheet" href="css/all.css">	
 </head>
 <body>
-	<script src="https://unpkg.com/vue@2.5.16/dist/vue.js"></script>
 	<div class="wrap">
 		<div id="header">
-			<h1><a v-on:click.prevent="" v-bind:class="{title: classStatus.hoverOn}" href="#">Shopping cart test</a></h1>
-			<a v-on:click.prevent="clickShoppingCart" href="#" title="購物車"><i class="fas fa-shopping-cart" v-bind:class="{cart: classStatus.hoverOn}"></i><span v-if="number > 0">{{number}}</span></a>		
+			<h1>
+				<a v-on:click.prevent=""
+						v-bind:class="{title: classStatus.hoverOn}"
+						href="#">Shopping cart test</a>
+			</h1>
+			<a v-on:click.prevent="clickShoppingCart"
+					href="#" title="購物車">
+				<i class="fas fa-shopping-cart"
+						v-bind:class="{cart: classStatus.hoverOn}"></i>
+				<span v-if="number > 0">{{number}}</span>
+			</a>		
 		</div>
 		<div id="content">
 			<ul class="classification" v-if="judgment.productOn">
-				<li v-bind:class="{classificationHover: classStatus.hoverOn, touchColor: classStatus.phoneOn}" v-on:click="clickPhone">Phone</li>
-				<li v-bind:class="{classificationHover: classStatus.hoverOn, touchColor: classStatus.notebookOn}" v-on:click="clickNotebook">Notebook</li>
+				<li v-bind:class="{classificationHover: classStatus.hoverOn, touchColor: classStatus.phoneOn}"
+						v-on:click="clickPhone">Phone</li>
+				<li v-bind:class="{classificationHover: classStatus.hoverOn, touchColor: classStatus.notebookOn}"
+						v-on:click="clickNotebook">Notebook</li>
 			</ul>
 			<ul class="productList" v-if="judgment.listButtom && judgment.productOn">
-				<li class="list" v-for="item in product[0]" v-bind:class="{listHover: classStatus.hoverOn}" v-bind:data-num="item['No.']" v-on:click="clickList">
+				<li class="list"
+						v-for="(item, index) in product[0]"
+						v-bind:class="{listHover: classStatus.hoverOn}"
+						v-on:click="clickList(index)">
 					<ul>
 						<li class="productImg" v-bind:style="{'background-image': 'url(' + item.img + ')'}"></li>
 						<li>{{item['產品名稱']}}</li>
@@ -42,7 +55,10 @@
 			<div class="productDetail" v-if="judgment.detailButtom && judgment.productOn">
 				<ul>
 					<li class="detailImg" v-bind:style="{'background-image': 'url(' + product[0].img + ')'}"></li>
-					<li class="inputCart" v-if="judgment.inputCartButtom" v-bind:class="{inputCartHover: classStatus.hoverOn}" v-on:click="clickInputCart">放入購物車</li>
+					<li class="inputCart"
+							v-if="judgment.inputCartButtom"
+							v-bind:class="{inputCartHover: classStatus.hoverOn}"
+							v-on:click="clickInputCart">放入購物車</li>
 					<li class="alreadyShopping" v-if="judgment.alreadyShoppingButtom">已加入購物車</li>
 					<li>{{product[0]['產品名稱']}}</li>
 					<li>{{product[0]['價格']}}</li>						
@@ -65,7 +81,9 @@
 						<li class="cartProductPrice">{{item['價格']}}</li>
 						<li>
 							<input type="button" title="減少" value="-" v-on:click="clickReduce">
-							<input class="number" type="number" min="1" max="100" step="1" v-bind:data-index="index" v-model="shoppingNumber[index]">
+							<input class="number" type="number" min="1" max="100" step="1"
+									v-bind:data-index="index"
+									v-model="shoppingNumber[index]">
 							<input type="button" title="增加" value="+" v-on:click="clickIncrease">
 						</li>						
 						<li class="cartSubtotal">{{count(index)}}</li>
@@ -80,6 +98,7 @@
 			<p>Copyright © Gavin Hsu All rights reserved.</p>
 		</div>
 	</div>
+	<script src="https://unpkg.com/vue@2.5.16/dist/vue.js"></script>
 	<script src="js/all.js"></script>
 </body>
 </html>
